--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     margin-bottom: 28px;
 }
 
-.banner .signup_btn {
+.signup_btn {
     background-color: #FCD535;
     padding-left: 24px;
     padding-right: 24px;
@@ -86,4 +86,18 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
+}
+
+
+.earning {
+    background-color: #FAFAFA;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.earning h1 {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 48px;
+    color: #1E2329;
 }
