--- a/style.css
+++ b/style.css
@@ -88,6 +88,63 @@
     line-height: 24px;
 }
 
+.rewards h1 {
+    color: #1E2329;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 48px;
+    margin-bottom: 16px;
+}
+
+.rewards h6 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #474D57;
+    margin-bottom: 64px;
+}
+
+.rewards .reward_box {
+    padding: 24px 45px;
+    background-color: rgb(250, 250, 250);
+    text-align: center;
+    border-radius: 15px;
+    border: 2px solid rgb(250, 250, 250);
+    transition: 0.3s ease-in-out;
+}
+
+.rewards .reward_box:hover {
+    border: 2px solid rgb(252, 213, 53);
+    background-color: rgb(255, 255, 255);
+}
+
+.rewards .reward_box:hover button {
+    background-color: rgb(252, 213, 53);
+    color: black;
+}
+
+.rewards .reward_box img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.rewards .reward_box button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: #969CA3;
+    border: none;
+    background-color: #EBECF0;
+    transition: 0.3s ease-in-out;
+}
+
+
+
+
+
+
 .help {
     margin-bottom: 100px;
 }
@@ -122,16 +179,6 @@
     background-color: transparent;
     border: none;
 }
-
-
-
-
-
-
-
-
-
-
 
 .earning {
     background-color: #FAFAFA;
