--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+
+* {
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1,
+  h3,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    margin: 0;
+  }
+
 .container {
     max-width: 1169px;
 }
@@ -160,6 +176,45 @@
     border: none;
     background-color: #EBECF0;
     transition: 0.3s ease-in-out;
+}
+
+
+.explore h1 {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 48px;
+    color: #1E2329;
+    margin-bottom: 60px;
+}
+
+.explore .explore_box {
+    padding: 40px 24px;
+    background-color: #FAFAFA;
+    border-radius: 8px;
+    height: 570px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: 0.3s ease-in-out;
+}
+
+.explore .explore_box:hover {
+    box-shadow: 0px 8px 16px rgba(24, 26, 32, 0.16);
+    scale: 1.001;
+}
+
+.explore .explore_box h2 {
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 36px;
+    margin-bottom: 16px;
+}
+
+.explore .explore_box p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #1E2329;
 }
 
 .crypto h3 {
