--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
-
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  h1,
-  h3,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
+}
+
+h1,
+h3,
+h3,
+h4,
+h5,
+h6,
+p {
     margin: 0;
-  }
+}
 
 .container {
     max-width: 1169px;
@@ -123,7 +122,6 @@
     font-size: 20px;
     line-height: 28px;
     color: #474D57;
-    margin-bottom: 64px;
 }
 
 .section_gap {
@@ -149,6 +147,7 @@
     border-radius: 15px;
     border: 2px solid rgb(250, 250, 250);
     transition: 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .rewards .reward_box:hover {
@@ -178,6 +177,51 @@
     transition: 0.3s ease-in-out;
 }
 
+.trending .avater {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.trending p {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(71, 77, 87);
+    cursor: pointer;
+}
+
+.trending h4 {
+    color: rgb(30, 35, 41);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.trending span {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(112, 122, 138);
+}
+
+.trending .community {
+    background-color: rgb(245, 245, 245);
+    border-radius: 16px;
+}
+
+.trending .community div {
+    padding: 16px 32px 32px;
+}
+
+.trending .community h3 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+    color: rgb(30, 35, 41);
+    margin-bottom: 24px;
+}
 
 .explore h1 {
     font-weight: 600;
@@ -196,6 +240,7 @@
     flex-direction: column;
     justify-content: space-between;
     transition: 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .explore .explore_box:hover {
@@ -342,10 +387,15 @@ footer h6 {
     margin-bottom: 20px;
 }
 
-footer a {
+footer a, footer p {
     margin-bottom: 12px;
     color: #707A8A;
     font-size: 14px;
     display: block;
     text-decoration: none;
+    transition: 0.3s ease-in-out;
+}
+
+footer a:hover {
+    color: #1E2329;
 }
