--- a/style.css
+++ b/style.css
@@ -199,49 +199,77 @@ header .sub_menu:hover .fa-arrow-right {
 
 .carousel-indicators {
     bottom: -45px !important;
-  }
-  
-  .carousel-inner {
+}
+
+.carousel-inner {
     border-radius: 16px !important;
-  }
-  
-  .carousel-indicators [data-bs-target] {
+}
+
+.carousel-indicators [data-bs-target] {
     background-color: #ebedf0 !important;
     border-radius: 50% !important;
     height: 8px !important;
     width: 8px !important;
     opacity: 1 !important;
     border: none !important;
-  }
-  
-  .carousel-indicators .active {
+}
+
+.carousel-indicators .active {
     background-color: #f0b90b !important;
     width: 27px !important;
     border-radius: 10px !important;
-  }
-  
-  .sliderContainer {
+}
+
+.sliderContainer {
     margin-top: 40px;
     margin-bottom: 85px;
-  }
-  
-  /* popular cryptocurrencies */
-  
-  .popularCryptoContainer {
+}
+
+/* popular cryptocurrencies */
+
+.popularCryptoContainer {
     margin-top: 93px;
-  }
- 
-  .popularCryptoHeader h1 {
+}
+
+.popularCryptoHeader h1 {
     font-weight: 600;
     font-size: 40px;
     line-height: 48px;
-  }
-  .popularCryptoHeader p {
+}
+
+.popularCryptoHeader p {
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
     color: #707a8a;
-  }
+}
+
+table tr {
+    border-color: transparent !important;
+    cursor: pointer;
+}
+
+table th {
+    font-size: 14px;
+    color: #707A8A;
+    line-height: 18px;
+    font-weight: 400;
+}
+
+table td {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #1E2329;
+}
+
+table td:last-child,
+table th:last-child {
+    text-align: end;
+}
+
+
+
 
 .rewards .reward_box {
     padding: 24px 45px;
